--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,10 @@ set(CMAKE_C_STANDARD 11)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 
-add_executable(bfcmp src/main.c src/clipp.c
-        src/trans.h
-        src/fio.h
-        src/fio.c
-        src/trans.c
-        src/util.c)
+add_executable(bfcmp cmp/main.c cmp/clipp.c
+        cmp/trans.h
+        cmp/fio.h
+        cmp/fio.c
+        cmp/trans.c
+        cmp/util.c
+)
