--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(bfcmp C)
 
 set(CMAKE_C_STANDARD 11)
 
-option(BUILD_DEMO "Build the demo program" ON)
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "lib")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "lib")
+
+option(BUILD_DEMO_PROGRAM "Compile the demo program" OFF)
 
 # The compiler itself
 add_executable(cmp cmp/main.c cmp/clipp.c
@@ -18,7 +18,8 @@ add_executable(cmp cmp/main.c cmp/clipp.c
         cmp/util.c
 )
 
-add_custom_command(TARGET cmp POST_BUILD DEPENDS ${CMAKE_SOURCE_DIR}/demo/logo.bf COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cmp ARGS --source ${CMAKE_SOURCE_DIR}/demo/logo.bf --output ${CMAKE_SOURCE_DIR}/demo/logo.c)
+# Use the compiler to compile a sample brainfuck program
+add_custom_target(compile-sample DEPENDS cmp DEPENDS ${CMAKE_SOURCE_DIR}/demo/logo.bf COMMAND ${CMAKE_BINARY_DIR}/${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cmp --source ${CMAKE_SOURCE_DIR}/demo/logo.bf --output ${CMAKE_SOURCE_DIR}/demo/logo.c VERBATIM)
 
 # Brainfuck core library
 add_library(core STATIC
@@ -26,8 +27,9 @@ add_library(core STATIC
         core/core.c)
 
 # A demo program compiled with the compiler and linked with `libcore`
-if (BUILD_DEMO)
+if (BUILD_DEMO_PROGRAM)
     add_executable(demo demo/logo.c)
+    add_dependencies(demo compile-sample)
     target_link_libraries(demo core)
-    set_target_properties(demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "bin-demo")
-endif (BUILD_DEMO)
+    set_target_properties(demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "demo")
+endif (BUILD_DEMO_PROGRAM)
