--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(cmp cmp/main.c cmp/clipp.c
         cmp/parse.c
         cmp/help.h
         cmp/help.c
+        cmp/defs.h
 )
 
 # Reformat the brainfuck source code using the compiler's built-in functionality
